pkgs/ndarray/hook/custom_ufuncs.h

/* ============================================================================
 * SECTION 1: CORE COMPLEX TYPE DEFINITIONS
 * ============================================================================
 * Binary-compatible complex number structures matching kiss_fft_cpx
 * and mapped directly to ndarray's custom Complex structures.
 */

typedef struct {
    double r; /** Real component */
    double i; /** Imaginary component */
} cpx_t;
typedef struct {
    float r;  /** Real component */
    float i;  /** Imaginary component */
} cpx_f_t;
void s_remainder_double(const double *x1, const int *stridesX1, const double *x2, const int *stridesX2, double *res, const int *stridesRes, const int *shape, int rank);
void s_remainder_float(const float *x1, const int *stridesX1, const float *x2, const int *stridesX2, float *res, const int *stridesRes, const int *shape, int rank);
void s_remainder_int64(const int64_t *x1, const int *stridesX1, const int64_t *x2, const int *stridesX2, int64_t *res, const int *stridesRes, const int *shape, int rank);
void s_remainder_int32(const int32_t *x1, const int *stridesX1, const int32_t *x2, const int *stridesX2, int32_t *res, const int *stridesRes, const int *shape, int rank);
void s_isnan_double(const double *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isnan_float(const float *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isnan_complex128(const cpx_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isnan_complex64(const cpx_f_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isinf_double(const double *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isinf_float(const float *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isinf_complex128(const cpx_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isinf_complex64(const cpx_f_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isfinite_double(const double *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isfinite_float(const float *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isfinite_complex128(const cpx_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_isfinite_complex64(const cpx_f_t *src, const int *stridesSrc, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_copysign_double(const double *x1, const int *stridesX1, const double *x2, const int *stridesX2, double *res, const int *stridesRes, const int *shape, int rank);
void s_copysign_float(const float *x1, const int *stridesX1, const float *x2, const int *stridesX2, float *res, const int *stridesRes, const int *shape, int rank);
/* Strided Vectorized Bitwise Universal Functions */
void s_bitwise_and_int32(const int32_t *a, const int *stridesA, const int32_t *b, const int *stridesB, int32_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_and_int64(const int64_t *a, const int *stridesA, const int64_t *b, const int *stridesB, int64_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_and_uint8(const uint8_t *a, const int *stridesA, const uint8_t *b, const int *stridesB, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_and_int16(const int16_t *a, const int *stridesA, const int16_t *b, const int *stridesB, int16_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_or_int32(const int32_t *a, const int *stridesA, const int32_t *b, const int *stridesB, int32_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_or_int64(const int64_t *a, const int *stridesA, const int64_t *b, const int *stridesB, int64_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_or_uint8(const uint8_t *a, const int *stridesA, const uint8_t *b, const int *stridesB, uint8_t *res, const int *stridesRes, const int *shape, int rank);
void s_bitwise_or_int16(const int16_t *a, const int *stridesA, const int16_t *b, const int *stridesB, int16_t *res, const int *stridesRes, const int *shape, int rank);