pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_remainder_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_remainder_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_remainder_int64(
  ffi.Pointer<ffi.Int64> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Int64> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_remainder_int32(
  ffi.Pointer<ffi.Int32> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Int32> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isnan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isnan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isnan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isnan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isinf_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isinf_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isinf_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isinf_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isfinite_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isfinite_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isfinite_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_isfinite_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_copysign_double(
  ffi.Pointer<ffi.Double> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Double> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_copysign_float(
  ffi.Pointer<ffi.Float> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<ffi.Float> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

/// Strided Vectorized Bitwise Universal Functions
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_and_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_and_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_and_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_and_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int16> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_or_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_or_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_or_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Uint8> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_bitwise_or_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Int16> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);
